fix(components): show scrollbar only overflow
Closes #2255

--- a/app/scripts/components/summary-card/styles.less
+++ b/app/scripts/components/summary-card/styles.less
@@ -28,5 +28,5 @@
 
 .card-table {
   max-height: 300px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
